# lode-corival-rs232-rust

./: .gitignore  Cargo.toml  README.md
firmware/: Cargo.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: bike_serial.rs  ble_server.rs  main.rs  status_led.rs
lode-protocol/: Cargo.toml
lode-protocol/src/: cp_indication_gate.rs  ftms_control_point.rs  ftms_encoder.rs  lib.rs  lode_parser.rs  state_machine.rs
src/: ftms_encoder.rs  lib.rs  lode_parser.rs
