[workspace]
members = [
    "firmware",
    "lode-protocol",
]
resolver = "2"

[profile.release]
opt-level = "s"    # size-optimized for firmware flash
lto = true
codegen-units = 1
debug = 2          # keep debug info; espflash strips for the flashed image

[profile.dev]
debug = true
opt-level = "z"

# Local fork of esp32-nimble with fixes for:
# - set_indicate_wait being a no-op predicate
# - on_notify_tx never firing for SuccessIndicate
# See /Users/bd/Coding/esp32-nimble (branch: lode-patches).
[patch.crates-io]
esp32-nimble = { path = "../esp32-nimble" }
