[workspace]
members = [
    "firmware",
    "lode-protocol",
]
resolver = "2"

[profile.release]
opt-level = "s"    # size-optimized for firmware flash
lto = true
codegen-units = 1
debug = 2          # keep debug info; espflash strips for the flashed image

[profile.dev]
debug = true
opt-level = "z"

# Fork of esp32-nimble with the set_indicate_wait fix.
# Upstream PR: https://github.com/taks/esp32-nimble/pull/200
# Drop this patch once that PR merges and a release ships.
[patch.crates-io]
esp32-nimble = { git = "https://github.com/bmdragos/esp32-nimble.git", branch = "main" }
