[package]
name = "firmware"
version = "0.1.0"
authors = ["Brandon <brandon@dexafit.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "firmware"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

# Profiles are defined at the workspace root.

[dependencies]
log = "0.4"
anyhow = "1"
esp-idf-svc = { version = "0.52.1", features = ["critical-section"] }
esp32-nimble = "0.12"
lode-protocol = { path = "../lode-protocol" }

[build-dependencies]
embuild = "0.33"
